--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0, user-scalable=no">
-    <title>Dreamport Business Card</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0, user-scalable=no">
+  <title>Dreamport Business Card</title>
+
+  <!-- <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script> -->
+  <script src="scripts/aframe.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 </head>
 <body>
-    <a-scene>
-        <a-camera></a-camera>
-    </a-scene>
+  <a-scene vr-mode-ui="enabled: false;"
+           embedded>
+    <a-assets>
+      <a-asset-item response-type="arraybuffer" id="plate" src="assets/plate.glb"></a-asset-item>
+      <img id="photo" src="images/photos/kamaev.png"></img>
+    </a-assets>
+
+    <a-nft
+    type="nft"
+    url="images/tracking images/main/image"
+    smooth="true"
+    smoothcount="10"
+    smoothtolerance=".01"
+    smooththreshold="5">
+      <a-box color="yellow"
+             position="0 0 0"
+             scale="100 100 100"></a-box>
+      <a-entity position="0 0 0">
+        <!-- <a-entity gltf-model="#plate" scale="50 50 50" position="0 0 0"></a-entity> -->
+        <!-- <a-image src="#photo" scale="500 500 500" rotation="-90 0 0"></a-image> -->
+      </a-entity>
+    </a-nft>
+    <a-nft
+     type="nft"
+     url="images/tracking images/test/test">
+     <a-entity gltf-model="#plate" scale="50 50 50" position="0 0 0"></a-entity>
+    </a-nft>
+    <a-entity camera></a-entity>
+  </a-scene>
 </body>
 </html>
